# ikuchio-cup-2025

./: .$architecture.drawio.bkp  .$architecture.drawio.dtmp  .gitignore  README.md  architecture-diagram.drawio  architecture.drawio  cloudbuild-prod.yaml  cloudbuild.yaml  deploy-prod.sh  gcp.md  ikuchio-cup-2025.code-workspace  setup-cloudflare-tunnel.sh  setup-dns.sh  setup-gke.sh  setup-prod-cluster.sh
backend/: Dockerfile
backend/ikuchio-cup-2025/: .dockerignore  Dockerfile  main.py  pyproject.toml  run.py
backend/ikuchio-cup-2025/src/: main.py  model.py  startup.py  test_secret.py  websocket_manager.py
backend/ikuchio-cup-2025/src/auth/: firebase_auth.py
backend/ikuchio-cup-2025/src/db/: rooms.py  users.py
backend/ikuchio-cup-2025/src/gcp/: firestore.py  gemini.py  image_gemini.py  secret_manager.py
backend/ikuchio-cup-2025/src/routers/: rooms.py  users.py  users_simple.py
backend/ikuchio-cup-2025/src/scheduler/: room_scheduler.py
backend/ikuchio-cup-2025/test/: test_firestore.py
frontend/: Dockerfile  nginx.conf
frontend/ikuchio-cup-2025/: Dockerfile  README.md  index.html  package-lock.json  package.json
k8s/: autopilot-optimized.yaml  backend-deployment.yaml  cloudflare-tunnel.yaml  frontend-deployment.yaml  hpa-simple.yaml  hpa.yaml  ingress-simple.yaml  ingress.yaml  internal-lb.yaml  namespace.yaml  network-policy-fix.yaml  redis-deployment.yaml  secret.yaml  service-account.yaml  services.yaml  ssl-cert.yaml
k8s/prod/: backend.yaml  cloudflare-tunnel.yaml  frontend.yaml  internal-lb.yaml  namespace.yaml  redis.yaml
(+7 files in other folders)
