[project]
name = "ikuchio-cup-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-cloud>=0.34.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-genai>=1.36.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
